--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,68 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical" android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-    <TextView
-            android:id="@+id/name_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/name"
-            android:textAlignment="center"
-            style="@style/NameStyle"/>
-
-    <EditText
-            android:id="@+id/nickname_edit"
-            style="@style/NameStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/what_is_your_nickname"
-            android:inputType="textPersonName"
-            android:textAlignment="center" />
-
-    <Button
-            android:id="@+id/done_button"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@android:color/holo_orange_light"
-            android:layout_marginTop="@dimen/layout_margin"
-            android:fontFamily="@font/roboto"
-            android:text="@string/done" />
-
-    <TextView
-            android:id="@+id/nickname_text"
-            style="@style/NameStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:visibility="gone" />
-
-    <ImageView
-            android:id="@+id/star_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/layout_margin"
-            android:contentDescription="@string/yellow_star"
-            app:srcCompat="@android:drawable/btn_star_big_on"/>
 
 
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ScrollView
+    <data>
+        <!-- Declare a variable by specifying a name and a data type. -->
+        <!-- Use fully qualified name for the type. -->
+        <variable
+                name="myName"
+                type="kt.enterprises.com.aboutme.data_classes.MyName" />
+    </data>
+
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         <TextView
-                android:id="@+id/bio_text"
+                android:id="@+id/name_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={myName.name}"
+                android:textAlignment="center"
+                style="@style/NameStyle"/>
+
+        <EditText
+                android:id="@+id/nickname_edit"
                 style="@style/NameStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lineSpacingMultiplier="1.2"
-                android:text="@string/bio"/>
+                android:ems="10"
+                android:hint="@string/what_is_your_nickname"
+                android:inputType="textPersonName"
+                android:textAlignment="center"/>
 
-    </ScrollView>
+        <Button
+                android:id="@+id/done_button"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@android:color/holo_orange_light"
+                android:layout_marginTop="@dimen/layout_margin"
+                android:fontFamily="@font/roboto"
+                android:text="@string/done"/>
 
-</LinearLayout>
+        <TextView
+                android:id="@+id/nickname_text"
+                style="@style/NameStyle"
+                android:text="@={myName.nickname}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:visibility="gone"/>
+
+        <ImageView
+                android:id="@+id/star_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/layout_margin"
+                android:contentDescription="@string/yellow_star"
+                app:srcCompat="@android:drawable/btn_star_big_on"/>
+
+
+        <ScrollView
+                android:layout_margin="@dimen/layout_margin"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:id="@+id/bio_text"
+                    style="@style/NameStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingMultiplier="1.2"
+                    android:text="@string/bio"/>
+
+        </ScrollView>
+
+    </LinearLayout>
+
+</layout>
